nout2.0